# mcp-maze-runner

./: README.md  main.py  pyproject.toml  run_game.py
.github/workflows/: tests.yml
docs/: requirements.md
root_agent/: agent.py
src/: __init__.py  character.py  game.py  maze.py  server.py
tests/: __init__.py  test_character.py  test_game.py  test_maze.py  test_server.py
ui/: __init__.py  app.py  runner.py
